[gd_scene load_steps=13 format=3 uid="uid://du42pw2umdhu3"]

[ext_resource type="Script" path="res://entities/turret/turret.gd" id="1_x743x"]
[ext_resource type="PackedScene" uid="uid://guniw5vobaw2" path="res://controller/character/life_controller/life_controller.tscn" id="2_swi1r"]
[ext_resource type="PackedScene" uid="uid://cew60xmpm88f0" path="res://controller/abilities/ability_controller/ability_controller.tscn" id="3_484hj"]
[ext_resource type="PackedScene" uid="uid://1603plgxjtft" path="res://controller/character/aggro_controller/aggro_controller.tscn" id="4_os7b8"]
[ext_resource type="PackedScene" uid="uid://hy7fcsdx2bf7" path="res://controller/character/movement_controller/movement_controller.tscn" id="4_s3vgh"]
[ext_resource type="PackedScene" uid="uid://cgd1r0dhbs8df" path="res://controller/hud/life_hud/life_hud.tscn" id="4_sgby2"]
[ext_resource type="PackedScene" uid="uid://d1pslehy0udds" path="res://controller/hud/cooldown_hud/cooldown_hud.tscn" id="5_ryaps"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jb1f7"]
height = 0.75
radius = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_colk6"]
radius = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fderk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tf4vj"]

[sub_resource type="CylinderMesh" id="CylinderMesh_0k03r"]

[node name="Turret" type="CharacterBody3D"]
collision_layer = 5
script = ExtResource("1_x743x")

[node name="LifeController" parent="." node_paths=PackedStringArray("life_hud") instance=ExtResource("2_swi1r")]
life_hud = NodePath("../HeadCollision/LifeHud")

[node name="MovementController" parent="." instance=ExtResource("4_s3vgh")]

[node name="HeadCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_jb1f7")

[node name="LifeHud" parent="HeadCollision" instance=ExtResource("4_sgby2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="CooldownHud" parent="HeadCollision" instance=ExtResource("5_ryaps")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)

[node name="Head" type="MeshInstance3D" parent="HeadCollision"]
mesh = SubResource("SphereMesh_colk6")
skeleton = NodePath("../..")

[node name="AbilityController" parent="HeadCollision/Head" node_paths=PackedStringArray("cooldown_hud") instance=ExtResource("3_484hj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
cooldown_hud = NodePath("../../CooldownHud")

[node name="AggroController" parent="HeadCollision/Head" instance=ExtResource("4_os7b8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
deaggro_radius = 40.0

[node name="Mouth" type="MeshInstance3D" parent="HeadCollision/Head"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, -1)
mesh = SubResource("CapsuleMesh_fderk")
skeleton = NodePath("../../..")

[node name="BodyCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_tf4vj")

[node name="Body" type="MeshInstance3D" parent="BodyCollision"]
mesh = SubResource("CylinderMesh_0k03r")
skeleton = NodePath("../../HeadCollision/Head")
